--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "dasein-core"
-version = "0.1.0"
+version = "0.1.1"
 description = "Universal memory for agentic AI. Attach a brain to any LangChain/LangGraph agent in a single line."
 readme = "README.md"
 requires-python = ">=3.8"
@@ -33,7 +33,7 @@ dependencies = [
     "sqlalchemy>=2.0",
     "tabulate>=0.9.0",
     "python-dotenv>=1.0",
-    "requests>=2.31.0",
+    "requests>=2.31.0,<2.35.0",  # Relaxed for Colab compatibility
 ]
 
 [project.urls]
