--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -9,6 +9,9 @@ include setup.py
 # Include examples
 recursive-include examples *.ipynb *.py *.md
 
+# Include spaCy model
+recursive-include src/dasein/models *
+
 # Exclude development and build artifacts
 global-exclude __pycache__
 global-exclude *.py[cod]
