--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "dasein-core"
-version = "0.2.8"
+version = "0.2.9"
 description = "Universal memory for agentic AI. Attach a brain to any LangChain/LangGraph agent in a single line."
 readme = "README.md"
 requires-python = ">=3.8"
@@ -38,7 +38,6 @@ dependencies = [
     "numpy>=1.24.0",
     "sentence-transformers>=2.2.0",
     "spacy>=3.5.0",
-    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl",
 ]
 
 [project.urls]
@@ -62,5 +61,8 @@ where = ["src"]
 "" = "src"
 
 [tool.setuptools.package-data]
-dasein = ["py.typed"]
+dasein = [
+    "py.typed",
+    "models/**/*"
+]
 
