--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "dasein-core"
-version = "0.2.14"
+version = "0.2.15"
 description = "Universal memory for agentic AI. Attach a brain to any LangChain/LangGraph agent in a single line."
 readme = "README.md"
 requires-python = ">=3.8"
@@ -38,6 +38,7 @@ dependencies = [
     "numpy>=1.24.0",
     "sentence-transformers>=2.2.0",
     "spacy>=3.5.0",
+    "faiss-cpu>=1.7.0",  # CRITICAL: 25-75x speedup for large batches (500-1500 sentences)
 ]
 
 [project.urls]
